# GameBoyWorlds

./: .gitignore  download_roms.sh  pyproject.toml  quick_tests.sh
.github/workflows/: docs.yaml  quick_tests.yaml
benchmark_tests/: pokemon.csv  tasks.csv
configs/: private_vars.yaml  project_vars.yaml  rom_data_path_vars.yaml
demos/: benchmark.py  emulator.py  environment.py  run_benchmark_zero_shot.py
dev/: test_benchmark_tasks.py
src/gameboy_worlds/: __init__.py  setup_data.py
src/gameboy_worlds/emulation/: emulator.py  parser.py  registry.py  tracker.py
src/gameboy_worlds/emulation/bomberman/: base_metrics.py  parsers.py  registry.py  test_metrics.py  trackers.py
src/gameboy_worlds/emulation/deja_vu/: base_metrics.py  parsers.py  registry.py  test_metrics.py  trackers.py
src/gameboy_worlds/emulation/hamtaro/: __init__.py  base_metrics.py  emulators.py  parsers.py  registry.py  trackers.py
src/gameboy_worlds/emulation/harrypotter/: parsers.py  registry.py  test_metrics.py  trackers.py
src/gameboy_worlds/emulation/harvest_moon/: parsers.py  registry.py  test_metrics.py  trackers.py
src/gameboy_worlds/emulation/legend_of_zelda/: parsers.py  registry.py  test_metrics.py  trackers.py
src/gameboy_worlds/interface/: environment.py  registry.py
src/gameboy_worlds/utils/: __init__.py
src/poke_worlds/emulation/: emulator.py  parser.py  registry.py  tracker.py
src/poke_worlds/emulation/deja_vu/: parsers.py  (+2 more)
src/poke_worlds/execution/: retrieval.py
src/poke_worlds/interface/: environment.py  registry.py
src/poke_worlds/utils/: fundamental.py
(+23 files in other folders)
